fixed squished image in options

--- a/home.css
+++ b/home.css
@@ -200,6 +200,7 @@ html{
 .option img{
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .option:hover img, .option p:hover img{
